# Luma

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
.sqlx/: query-ccad5ae6837effa988515c12dfcf1e7e1dec3fc284db51d6bbfddea7df07287d.json
Luma/: index.html  package-lock.json  package.json
Luma/src-tauri/: Cargo.toml  tauri.conf.json
Luma/src-tauri/src/: main.rs
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatList.tsx  ChatWindow.tsx  CreateRoomForm.tsx  LoginForm.tsx  MessageInput.tsx  RegisterForm.tsx
migrations/: 20250518192302_create_users.sql
public/: output.css
src/: App.tsx  client.rs  main.jsx  main.rs  matrix_api.rs  messages.rs  rooms.rs  sync.rs
src-tauri/: tauri.conf.json
src/components/: ChatList.tsx  ChatWindow.tsx  LoginForm.tsx  MessageInput.tsx  RegisterForm.tsx
src/styles/: index.css
