[package]
name = "Luma"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] } # "serde" не нужно указывать отдельно
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
tauri = { version = "2.5.1" }
axum = "0.6.20"
hyper = { version = "1.6.0", features = ["full"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "macros", "runtime-tokio-native-tls"] }
sha2 = "0.10.9"
tower-http = { version = "0.3.4", features = ["cors"] }
